--- a/modulo-2/sistema-loja/funcionarios.html
+++ b/modulo-2/sistema-loja/funcionarios.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,13 +19,21 @@
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
+    <table>
 
-    <h2>Funcionários</h2>
+    <h1>Funcionários</h1>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
+<tr>
+    <th>Nome: Ana</th>
+</tr>
+<tr>
+    <th>Nome: Adriana</th>
+</tr>
+<tr>  
+    <th>Nome: 
+        Luiza</th>
+    </tr>
+</table>
 
-    <p>Nome: Ana</p>
-    <p>Nome: Adriana</p>
-    <p>Nome: Luiza</p>
-        
 </body>
 </html>
