--- a/modulo-2/sistema-loja/index.html
+++ b/modulo-2/sistema-loja/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adventure</title>
 </head>
+
 <body>
-    <div>
-        <h1> <font color="green">Bem-vind@ à loja <em>Adventure!</em> </font> </h1>
+    <div class="titulo-loja"> 
         
-        <p> <b> <font color="green">Aqui você encontra os melhores acessórios para a sua aventura!</font> </b> </p>
+        <h1> Bem-vindo à loja <em> Minas Adventure!</em> </h1>
+
+
+        <p> <b> Aqui você encontra os melhores acessórios para a sua aventura! </b> </p>
     </div>
 
     <div>
@@ -21,19 +26,21 @@
     </div>
 
     <div>
-        <p> Mais de quatro decádas fornecendo equipamentos de primeira linha. Seja em termos de segurança, de durabilidade, ou desempenho.   </p>
+        <p> Mais de quatro décadas fornecendo equipamentos de primeira linha. Seja em termos de segurança, de
+            durabilidade, ou desempenho. </p>
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
 
     </div>
 
     <div>
-        <p> <b>Siga-nos nas redes sociais!</b></p>
+        <p> <b>Siga-nos nas redes sociais e fique por dentro de todas as novidades!</b></p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            <img src="./img/facebook-logo-3-1.png" width="30"/>
+            <img src="./img/Glossy-Instagram-logo-PNG.png" width="30" />
+            <img src="./img/whatsapp-logo-1.png"width="30" />
         </div>
     </div>
 </body>
+
 </html>
