--- a/modulo-2/sistema-loja/add-produto.html
+++ b/modulo-2/sistema-loja/add-produto.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -24,27 +25,45 @@
     <h2>Adicionar Produto</h2>
     <form action="">
         <div>
+            <table>
+                <th>
             <label for="link-foto">Link para foto: </label>
             <input type="url" id="link-foto" name="link-foto">
+            
+        </th>
+        </table>
         </div>
 
         <div>
+            <table> 
+            <th>
             <label for="descricao">Descrição do produto: </label>
             <!-- Adicione o id apropriado para o input abaixo -->
             <input type="text" id="descricao" name="descrição">
+        </th>
+        </table>
         </div>
 
         <div>
+            <table>
+                <th>
             <label for="preco">Preço (em R$): </label>
             <!-- Adicione o id apropriado e o type para receber números abaixo -->
             <input type="number" id="preco" name="preço">
+        </th>
+        </table>
         </div>
 
+
         <div>
+        <table>
+            <th>
             <!-- Preencha as propriedades necessárias para os elementos abaixo -->
             <label for="quantidade">Quantidade disponível: </label>
 
             <input type="text" id="quantidade" name="quantidade">
+        </th>
+        </table>
         </div>
 
         <div class="form-add">
