--- a/modulo-2/css-bugfixes/exercicio-bugfixes/home.html
+++ b/modulo-2/css-bugfixes/exercicio-bugfixes/home.html
@@ -15,7 +15,8 @@
     <div>
     
         <div class="container" id="container-de-descricao">
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+            <br> Somos uma empresa focada </br> em tornar a compra de </br>
+                 roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
